Fix: Naprawienie błędów kompilacji i PWA
- Poprawiona ścieżka do main.tsx w index.html
- Tymczasowo wyłączony Service Worker
- Uproszczony manifest.json
- Naprawione ścieżki do ikon
- Dodany brakujący tag mobile-web-app-capable

--- a/index.html
+++ b/index.html
@@ -13,16 +13,17 @@
     
     <!-- iOS Meta Tags -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="apple-mobile-web-app-title" content="PlexiSystem" />
-    <link rel="apple-touch-icon" href="/icons/icon-192x192.png" />
+    <link rel="apple-touch-icon" href="/logo192.png" />
     
     <!-- Microsoft Meta Tags -->
     <meta name="msapplication-TileColor" content="#f97316" />
-    <meta name="msapplication-TileImage" content="/icons/icon-192x192.png" />
+    <meta name="msapplication-TileImage" content="/logo192.png" />
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="/main.tsx"></script>
   </body>
 </html>
