--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <meta name="description" content="System zarządzania ofertami i ekspozytorami z plexi" />
     <link rel="manifest" href="/manifest.json" />
     
-    <!-- iOS Meta Tags -->
-    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <!-- Mobile Meta Tags -->
     <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="apple-mobile-web-app-title" content="PlexiSystem" />
     <link rel="apple-touch-icon" href="/logo192.png" />
